--- a/JiaoBaoYun-hb/html/mine/qun_data.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data.html
@@ -312,23 +312,34 @@
 							//gname	群名	string		否	群名称
 							//gimg	群头像	string		否	群头像的链接
 							mui.each(data.RspData, function(index, item) {
-								console.log('data.RspData:' + item.gname);
-								var qun = {
-									gid: item.gid, //群ID
-									gname: item.gname, //群名
-									gimg: item.gimg, //群头像,群头像的链接
-									mstype: item.mstype //用户管理角色,0家长,1管理员,2老师,3学生
+								//剔除同一个群身份不同
+								var same = false;
+								mui.each(qunList, function(index, qitem) {
+									if(qitem.gid == item.gid) {
+										same = true;
+										return false;
+									}
+								});
+								//不相同的群和身份
+								if(!same) {
+									console.log('data.RspData:群id:' + item.gid + '|群名：' + item.gname + '|管理角色：' + item.mstype);
+									var qun = {
+										gid: item.gid, //群ID
+										gname: item.gname, //群名
+										gimg: item.gimg, //群头像,群头像的链接
+										mstype: item.mstype //用户管理角色,0家长,1管理员,2老师,3学生
+									}
+									var hasGetMember = {
+										hasGetStu: false, //记录是否已获得学生
+										hasGetTea: false, //记录是否已获得老师
+										hasGetPar: false, //记录是否已获得家长
+										showBotId: '', //记录当前展示的成员区域id
+										showType: 'student', //记录当前展示的成员类型
+									};
+									mui.extend(qun, hasGetMember); //合并两个对象
+									qunList.push(qun);
+									addQun(qun);
 								}
-								var hasGetMember = {
-									hasGetStu: false, //记录是否已获得学生
-									hasGetTea: false, //记录是否已获得老师
-									hasGetPar: false, //记录是否已获得家长
-									showBotId: '', //记录当前展示的成员区域id
-									showType: 'student', //记录当前展示的成员类型
-								};
-								mui.extend(qun, hasGetMember); //合并两个对象
-								qunList.push(qun);
-								addQun(qun);
 							});
 							//getMember(qunList[0], type); //获取群的正常用户
 						} else if(data.RspCode == 9) {
