个人空间，添加点赞的人数据model型array

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -331,6 +331,8 @@
 						var tempModel0 = tempRspData[item];
 						//将当前model中id塞到数组
 						tempArray.push(tempModel0.PublisherId);
+						//合并数组,点赞的人
+						tempArray = tempArray.concat(tempModel0.LikeUsers);
 						//循环当前model中的回复数组
 						for(var item1 in tempModel0.Replys) {
 							//回复中的model
@@ -369,6 +371,14 @@
 								for(var item in tempRspData) {
 									//当前循环的model
 									var tempModel0 = tempRspData[item];
+									//遍历点赞的人
+									for(var item2 in tempModel0.LikeUsers) {
+										console.log('item2;;;;;=='+tempModel.utid+','+tempModel0.LikeUsers[item2]);
+										if(tempModel.utid == tempModel0.LikeUsers[item2]) {
+											tempModel0.LikeUsers.splice(item2,1,tempModel);
+										}
+									}
+									
 									//对比id是否一致
 									if(tempModel0.utid == tempModel.UserId) {
 										//合并
