修复同意申请时身份选择的bug

--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -9,11 +9,6 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<script src="../../js/mui.min.js"></script>
-		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
-		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/libs/myStorage/myStorage.js"></script>
-		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 
 		<style>
 			.mui-table-view {
@@ -221,345 +216,12 @@
 			</ul>
 		</div>
 		</div>
+		<script src="../../js/mui.min.js"></script>
+		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/libs/myStorage/myStorage.js"></script>
+		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
+		<script src="../../js/mine/about-me.js"></script>
 	</body>
-	<script>
-		mui.plusReady(function() {
-			//12.邀请用户入群
-			//		//需要参数
-			//		var comData = {
-			//			gid: '1',//群ID
-			//			beinvutid:'1',//被邀请人ID
-			//			beinvnick:'遥不可及',//被邀请人昵称
-			//			mstype:'0',//被邀请人类型,0家长,2老师,3学生
-			//			stat:'0',//入群状态,0待审,1同意
-			//			lnkinfid:'0'//关联资料ID,无资料关联填写0
-			//			urel:'',//与资料关系,与资料关系,一般申请加入家长的时候填写,如爸爸,妈妈,其他类型留空
-			//			vtp:'1'//邀请类型,0老师邀请家长,1个人申请入群,2群员邀请群员
-			//		};
-			//		// 等待的对话框
-			//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//postDataPro_PostInvGuser(comData, wd, function(data) {
-			//				wd.close();
-			//				console.log('123');
-			//				if(data.RspCode == 0) {
-			//
-			//				} else {
-			//					mui.toast(data.RspTxt);
-			//				}
-			//			});
-			//			var comData = {
-			//				vvl: '15264122518' //查询的值
-			//			};
-			//			// 等待的对话框
-			//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//			//返回值model：model_userInfo
-			//			postDataPro_PostUList(comData, wd, function(data) {
-			//				wd.close();
-			//				console.log('postDataPro_PostUList:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-			//				if(data.RspCode == 0) {
-			//
-			//				} else {
-			//					mui.toast(data.RspTxt);
-			//				}
-			//			});
-			//			//所需参数
-			//			var comData = {
-			//				vtp: 'inv', //获取项，要获取的项:inv(入群邀请),app(入群申请)
-			//			};
-			//
-			//			////返回值model：model_groupRequestUser
-			//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//			postDataPro_PostGrInv(comData, wd, function(data) {
-			//				wd.close();
-			//				console.log('17--postDataPro_PostGrInv:{RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + '}');
-			//			})
-		})
-
-		//页码，请求第几页数据
-		var tempPage = 1;
-		//当前留言的总条数
-		var totalCnt = 0;
-		//获取个人信息                                                        
-		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-		//判断是加载更多1，还是刷新2
-		var flag = 2;
-		//页码请求到要显示的数据，array[model_userSpaceAboutMe]
-		var aboutMeArray = [];
-		//请求数据
-		function requestData(comData) {
-			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//56.（用户空间）获取与我相关
-			postDataPro_getAboutMe(comData, wd, function(data) {
-				wd.close();
-				console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-				if(data.RspCode == 0) {
-					var tempRspData = data.RspData.Data;
-					//获取当前回调的个人信息，主要是头像、昵称
-					var tempArray = [];
-					//先遍历回调数组，获取
-					for(var item in tempRspData) {
-						//当前循环的model
-						var tempModel0 = tempRspData[item];
-						//将当前model中id塞到数组
-						tempArray.push(tempModel0.UserId);
-						//循环当前model中的回复数组
-						for(var item1 in tempModel0.MsgArray) {
-							//回复中的model
-							var tempModel1 = tempModel0.MsgArray[item1];
-							//将回复中的id塞到数组
-							tempArray.push(tempModel1.MsgFrom);
-							tempArray.push(tempModel1.MsgTo);
-						}
-					}
-					//给数组去重
-					tempArray = arrayDupRemoval(tempArray);
-					//发送获取用户资料申请
-					var tempData = {
-						vvl: tempArray.join(), //用户id，查询的值,p传个人ID,g传ID串
-						vtp: 'g' //查询类型,p(个人)g(id串)
-					}
-					console.log('tempData:' + JSON.stringify(tempData));
-					//21.通过用户ID获取用户资料
-					postDataPro_PostUinf(tempData, wd, function(data1) {
-						wd.close();
-						console.log('获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
-						if(data1.RspCode == 0) {
-							//循环当前的个人信息返回值数组
-							for(var i in data1.RspData) {
-								//当前model
-								var tempModel = data1.RspData[i];
-								//更新头像
-								tempModel.uimg = updateHeadImg(tempModel.uimg, 1);
-								//循环留言数组
-								for(var item in tempRspData) {
-									//当前循环的model
-									var tempModel0 = tempRspData[item];
-									//对比id是否一致
-									if(tempModel0.utid == tempModel.UserId) {
-										//合并
-										tempModel0 = $.extend(tempModel0, tempModel);
-									}
-									//循环当前model中的回复数组
-									for(var item1 in tempModel0.MsgArray) {
-										//回复中的model
-										var tempModel1 = tempModel0.MsgArray[item1];
-										//对比id是否一致
-										if(tempModel.utid == tempModel1.MsgFrom) {
-											//添加参数
-											tempModel1.MsgFromName = tempModel.unick;
-											tempModel1.MsgFromImg = tempModel.uimg;
-										}
-										if(tempModel.utid == tempModel1.MsgTo) {
-											//添加参数
-											tempModel1.MsgToName = tempModel.unick;
-											tempModel1.MsgToImg = tempModel.uimg;
-										}
-									}
-								}
-							}
-						}
-						console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
-
-						//判断是加载更多1，还是刷新2
-						if(flag == 1) {
-							//合并数组
-							aboutMeArray = aboutMeArray.concat(data.RspData.Data);
-						} else {
-							tempPage = 1;
-							//合并数组
-							aboutMeArray = data.RspData.Data;
-						}
-						//留言总条数
-						totalCnt = data.RspData.TotalCnt;
-					});
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			});
-		}
-
-		mui.init({
-			pullRefresh: {
-				container: '#pullrefresh',
-				down: {
-					callback: pulldownRefresh
-				},
-				up: {
-					contentrefresh: '正在加载...',
-					callback: pullupRefresh
-				}
-			}
-		});
-		/**
-		 * 下拉刷新具体业务实现
-		 */
-		function pulldownRefresh() {
-			//			id = id + 1;
-			//			setTimeout(function() {
-			//				var table = document.body.querySelector('.mui-table-view');
-			//				table.innerHTML = '';
-			//				var data = addData();
-			//				dynamiclistitem.addItem(table, data, id);
-			//				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-			//			}, 1500);
-
-			totalCnt = 0;
-			flag = 2; //刷新
-			var comData = {
-				userId: personalUTID, //用户ID
-				pageIndex: '1', //当前页数
-				pageSize: '10' //每页记录数
-			};
-			//请求数据
-			requestData(comData);
-		}
-
-		/**
-		 * 上拉加载具体业务实现
-		 */
-		function pullupRefresh() {
-			//					id = id + 1;
-			//					setTimeout(function() {
-			//						mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
-			//						var table = document.body.querySelector('.mui-table-view');
-			//						var data = addData();
-			//						dynamiclistitem.addItem(table, data, id);
-			//					}, 1500);
-
-			if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
-				mui.toast('没有更多了...');
-			} else {
-				flag = 1; //加载更多
-				tempPage++;
-				var comData = {
-					userId: personalUTID, //用户ID
-					pageIndex: (tempPage).toString(), //当前页数
-					pageSize: '10' //每页记录数
-				};
-				//请求数据
-				requestData(comData);
-			}
-		}
-		//		var id = 0;
-		//		mui.plusReady(function() {
-		//			var table = document.body.querySelector('.mui-table-view');
-		//			var data = addData();
-		//			dynamiclistitem.addItem(table, data, id);
-		//			var click = []; //记录被点击的li的id和被点击元素
-		//
-		//			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-		//				var toast = '';
-		//				mui.each(click, function(index, element) {
-		//					toast = toast + element;
-		//				});
-		//				var id = this.getAttribute('id');
-		//				click.push(id);
-		//				mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
-		//				click = [];
-		//			});
-		//
-		//			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
-		//				click.push('头像');
-		//			});
-		//			mui('.mui-table-view').on('tap', 'h4', function() {
-		//				click.push('姓名');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.mui-icon-arrowdown', function() {
-		//				click.push('向下按钮');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-contenttext', function() {
-		//				click.push('动态文字');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-image', function() {
-		//				click.push('图片' + this.getAttribute('src'));
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-image-more', function() {
-		//				click.push('更多图片');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-icon-praise', function() {
-		//				click.push('点赞');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
-		//				click.push('评论');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-icon-forward', function() {
-		//				click.push('分享');
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-praise-name', function() {
-		//				click.push('点赞者：' + this.innerText);
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-comment-name', function() {
-		//				click.push('评论者：' + this.innerText);
-		//			});
-		//			mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
-		//				click.push('评论按钮');
-		//			});
-		//		});
-		//
-		//		//加载数据
-		//		function addData() {
-		//			//[[InfoList],[ImageList],[InteractionList]]动态的信息
-		//			var Data = [];
-		//			var InfoList = []; //头部和内容
-		//			var ImageList = []; //内容的图片
-		//			var InteractionList = []; //底部内容
-		//
-		//			//个人信息和内容
-		//			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
-		//			var personalImage = '../../image/dynamic/u101.png';
-		//			var personalName = '李媛媛';
-		//			var time = '10月12日 10:55';
-		//			var contentText = '哎吆，几天不见都成艺术家了';
-		//			InfoList.push(personalImage);
-		//			InfoList.push(personalName);
-		//			InfoList.push(time);
-		//			InfoList.push(contentText);
-		//
-		//			//内容的图片
-		//			//[[ImageUrlList],ImageNum],动态内容的图片路径数组,图片总数量
-		//			var ImageUrlList = [];
-		//			if(id == 0) {
-		//				ImageUrlList = [
-		//				];
-		//			} else if(id == 1) {
-		//				ImageUrlList = [
-		//				];
-		//			} else if(id == 2) {
-		//				ImageUrlList = [
-		//				];
-		//			} else if(id == 3) {
-		//				ImageUrlList = [];
-		//			} else if(id == 4) {
-		//				ImageUrlList = [];
-		//			} else if(id == 5) {
-		//				ImageUrlList = [];
-		//			}
-		//			var ImageNum = ImageUrlList.length;
-		//			ImageList.push(ImageUrlList);
-		//			ImageList.push(ImageNum);
-		//
-		//			//底部
-		//			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
-		//			var introduce = '';
-		//			var viewCount = 30;
-		//			var praiseList = [];
-		//
-		//			//[commentList]:评论列表
-		//			//1.评论[commenter,content]，评论者，评论内容
-		//			//2.回复[replyer，commenter，replyContent]回复者，评论者，回复的内容
-		//			var commentList = [];
-		//			var replyer1 = ['赵雨欣', '李媛媛', '艺术源于生活'];
-		//			commentList.push(replyer1);
-		//
-		//			InteractionList.push(introduce);
-		//			InteractionList.push(viewCount);
-		//			InteractionList.push(praiseList);
-		//			InteractionList.push(commentList);
-		//
-		//			Data = [InfoList, ImageList, InteractionList]
-		//			return Data;
-		//		}
-	</script>
 
 </html>
