首页添加学生列表 点击进入学生动态

--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -65,11 +65,11 @@
 			var data = main.data; //接收A页面传入参数值
 			console.log('main-data:' + JSON.stringify(data));
 			//---假数据---start---
-			data={
-				userId:'5',
-				studentId:'5',
-				studentName:'BugHunter'
-			}
+//			data={
+//				userId:'5',
+//				studentId:'5',
+//				studentName:'BugHunter'
+//			}
 			//---假数据---end---
 			document.getElementById("title").innerText='BugHunter';
 			//创建子页面
