--- a/JiaoBaoYun-hb/html/quan/studentdynamic_sub.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_sub.html
@@ -240,6 +240,7 @@
 				//所需参数
 				var comData = {
 					userId: userId, //用户ID----utid
+					classId:data.classId,
 					studentId: data.studentId, //学生ID----stuid
 					pageIndex: pageIndex, //当前页数
 					pageSize: pageSize //每页记录数
