--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -21,9 +21,11 @@
 		<script>
 			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 			var datasource = []; //底部列表数据
+			var topStudentArr=[];
 			var topArray = []; //顶部班级列表数据
 			var requestTimes; //记录班级空间请求次数--等于0时，请求完毕，刷新界面
 			var requestTimes2; //记录群用户列表请求次数--等于0时，请求完毕，刷新界面
+			var requestTimes3;
 			var isRefresh = 0; //是否下拉刷新--1：下拉刷新 0：不是下拉刷新
 		</script>
 		<style type="text/css">
@@ -78,14 +80,14 @@
 				<!--第一个列表-->
 				<ul id="top-list" class="mui-table-view ">
 					<!--学生动态入口start-->
-					<li class="mui-table-view-cell mui-media studentsdynamic">
+					<!--<li class="mui-table-view-cell mui-media studentsdynamic">
 						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
 						<p class="time">10月19</p>
 						<div class="mui-media-body">
 							李欣芸
 							<p class='mui-ellipsis'>今天上课表现良好</p>
 						</div>
-					</li>
+					</li>-->
 					<!--学生动态入口end-->
 					<!--<li class="mui-table-view-cell mui-media tarClass">
 
