1、发布个人空间 2、个人空间界面

--- a/JiaoBaoYun-hb/html/quan/leave-reply.html
+++ b/JiaoBaoYun-hb/html/quan/leave-reply.html
@@ -34,7 +34,7 @@
 			var httpData = plus.webview.currentWebview().data;
 			var leaveContent = document.getElementById('content');
 			events.addTap('publish', function() {
-				if(!leaveContent.value) {
+				if(!leaveContent.value||leaveContent.value=='') {
 					mui.toast('请输入留言');
 					return;
 				}
