--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -9,18 +9,26 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/utils/camera.js"></script>
+		<script src="../../js/utils/files.js"></script>
+		<script src="../../js/utils/ASFiles.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script>
+			var userInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO); //用户id
+		</script>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">班级动态</h1>
+			<h1 id="title" class="mui-title"></h1>
 			<a id="publish" class="mui-pull-right">发布</a>
 		</header>
 		<div class="mui-content">
 			<div class="input-content">
-				<textarea id="input-content" placeholder="请输入内容">
-			    </textarea>
+				<textarea id="input-content" placeholder="请输入内容"></textarea>
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji"></a>
 				</div>
@@ -30,25 +38,21 @@
 			</div>
 		</div>
 	</body>
-	<script src="../../js/mui.min.js"></script>
 
-	<script src="../../js/utils/events.js"></script>
-	<script src="../../js/utils/camera.js"></script>
-	<script src="../../js/utils/files.js"></script>
-	<script src="../../js/utils/ASFiles.js"></script>
-	<script src="../../js/publicProtocol.js"></script>
 	<script type="text/javascript">
 		mui.init()
 	</script>
 	<script>
 		mui.plusReady(function() {
-			var groupInfo;
-			//界面监听传值
-			window.addEventListener('postGroupInfo', function(e) {
-
-				groupInfo = e.detail.data;
-				console.log('发布动态页面获取的值：' + JSON.stringify(groupInfo));
-			});
+			//			var groupInfo;
+			//			//界面监听传值
+			//			window.addEventListener('postGroupInfo', function(e) {
+			//
+			//				groupInfo = e.detail.data;
+			//				console.log('发布动态页面获取的值：' + JSON.stringify(groupInfo));
+			//			});
+			var title = document.getElementById('title');
+			title.innerText = userInfo.unick;
 			events.addTap('take_pic', function() {
 				camera.getPic(camera.getCamera());
 			})
@@ -57,11 +61,16 @@
 				})
 				//发布按钮
 			events.addTap('publish', function() {
-				console.log(123)
+				var textView = document.getElementById('input-content');
+				console.log('textView.value==='+textView.value)
+				if(!textView.value||textView.value==''){
+					mui.toast('请输入内容');
+					return;
+				}
 				var postData = {
-					userId: '1',
-					msgContent: '你好',
-					noteType:'2',
+					userId: userInfo.utid,
+					msgContent: textView.value,
+					noteType: '2',
 					encType: '0',
 					encAddr: '',
 					encImg: '',
@@ -70,14 +79,16 @@
 				console.log(JSON.stringify(postData));
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING)
 				postDataPro_addUserSpace(postData, wd, function(data) {
-						wd.close();
-						console.log(JSON.stringify(data));
-						if(data.RspCode = '0000') {
-							mui.toast('发布成功！');
-						} else {
-							mui.toast(data.RspTxt);
-						}
-					})
+					wd.close();
+					console.log(JSON.stringify(data));
+					if(data.RspCode = '0000') {
+						mui.toast('发布成功！');
+						textView.value = '';
+						
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				})
 			})
 		})
 	</script>
