--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -35,7 +35,7 @@
 			var userOwnerId = plus.webview.currentWebview().data;
 			var leaveContent = document.getElementById('content');
 			events.addTap('publish', function() {
-				if(!leaveContent.value) {
+				if(!leaveContent.value||leaveContent.value=='') {
 					mui.toast('请输入留言');
 					return;
 				}
