增加查看群学生资料

--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -161,12 +161,16 @@
 				if(info.uimg) {
 					var myDate = new Date();
 					document.getElementById('uimg').src = info.uimg + '?' + myDate.getTime();
+				}else{
+					document.getElementById('uimg').src ='../image/utils/default_personalimage.png';
 				}
 				if(info.uname) {
 					document.getElementById('uname').innerText = info.uname;
 				}
 				if(info.utxt) {
 					document.getElementById('utext').innerText = info.utxt;
+				}else{
+					document.getElementById('utext').innerText = "暂无信息";
 				}
 
 			}
