--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -119,7 +119,7 @@
 							</div>
 						</li>
 					</div>
-					<div id="par_create" style="display:none;">
+					<!--<div id="par_create" style="display:none;">
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>家长姓名:</label>
@@ -156,7 +156,7 @@
 								<input type="text" class="mui-input-clear">
 							</div>
 						</li>
-					</div>
+					</div>-->
 					<div id="tea_create" style="display: none;">
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
