--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -12,10 +12,10 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<link rel="stylesheet" href="../../css/mui.picker.min.css" />
-		<link rel="stylesheet" href="../../css/mui.poppicker.css" />
+		<!--<link rel="stylesheet" href="../../css/mui.picker.min.css" />-->
+		<!--<link rel="stylesheet" href="../../css/mui.poppicker.css" />-->
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/mui.picker.min.js"></script>
+		<!--<script type="text/javascript" src="../../js/mui.picker.min.js"></script>-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 
 		<style>
@@ -93,7 +93,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>学生电话:</label>
-								<input id="stu_phone" type="text" class="mui-input-clear">
+								<input id="stu_phone" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
@@ -105,7 +105,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>昵称:</label>
-								<input id="stu_ugname" type="text" class="mui-input-clear">
+								<input id="stu_ugname" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
@@ -117,11 +117,11 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>简介:</label>
-								<input id="stu_introduction" type="text" class="mui-input-clear">
+								<input id="stu_introduction" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
 					</div>
-					<div id="tea_show" style="display: ;">
+					<div id="tea_show" style="display:none ;">
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>姓名:</label>
@@ -137,7 +137,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>昵称:</label>
-								<input id="tea_ugname" type="text" class="mui-input-clear">
+								<input id="tea_ugname" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
@@ -179,7 +179,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>简介:</label>
-								<input id="tea_introduction" type="text" class="mui-input-clear">
+								<input id="tea_introduction" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
 					</div>
@@ -256,30 +256,30 @@
 					scrollY: true, //是否竖向滚动
 					bounce: true, //是否启用回弹
 				});
-				//---性别选择监听---start---
-				var genderPicker = new mui.PopPicker();
-				genderPicker.setData([{
-					value: '男',
-					text: '男'
-				}, {
-					value: '女',
-					text: '女'
-				}]);
-
-				//性别监听
-				mui('.mui-content').on('tap', '.gender', function() {
-					if(role == 1) {
-						console.log('gender:' + this.getAttribute('id'));
-						document.activeElement.blur(); //强制隐藏软键盘
-						var id = this.getAttribute('id')
-						genderPicker.show(function(items) {
-							document.getElementById(id).innerText = items[0].value;
-							//返回 false 可以阻止选择框的关闭
-							//return false;
-						});
-					}
-				});
-				//---性别选择监听---end---
+				//				//---性别选择监听---start---
+				//				var genderPicker = new mui.PopPicker();
+				//				genderPicker.setData([{
+				//					value: '男',
+				//					text: '男'
+				//				}, {
+				//					value: '女',
+				//					text: '女'
+				//				}]);
+				//
+				//				//性别监听
+				//				mui('.mui-content').on('tap', '.gender', function() {
+				//					if(role == 1) {
+				//						console.log('gender:' + this.getAttribute('id'));
+				//						document.activeElement.blur(); //强制隐藏软键盘
+				//						var id = this.getAttribute('id')
+				//						genderPicker.show(function(items) {
+				//							document.getElementById(id).innerText = items[0].value;
+				//							//返回 false 可以阻止选择框的关闭
+				//							//return false;
+				//						});
+				//					}
+				//				});
+				//				//---性别选择监听---end---
 
 				//保存按钮
 				document.getElementById('finish').addEventListener('tap', function() {
@@ -304,7 +304,7 @@
 						tea_sub.setAttribute('disabled', 'disabled'); //老师科目
 						tea_title.setAttribute('disabled', 'disabled'); //老师职称
 						tea_expsch.setAttribute('disabled', 'disabled'); //老师教龄
-						tea_introduction.setAttribute('disabled', 'disabled'); //老师简介
+						//tea_introduction.setAttribute('disabled', 'disabled'); //老师简介
 					}
 					getData(2);
 				}
@@ -384,12 +384,114 @@
 								if(teaData.expsch != null) { //教龄
 									tea_expsch.value = teaData.expsch;
 								}
+								if(teaData.utid != null && teaData.utid != '') {
+									getUserData(teaData.utid, 2);//查找关联的老师账号信息
+								}
 							}
 							if(type == 3) { //学生
 								mui.each(data.RspData, function(index, item) {
+									console.log('获取学生详细信息:' + JSON.stringify(item));
 									stuData.push(item);
+									if(item.umstype == 3) { //关联了学生账号
+										stu_utid.value = item.utid;
+										stu_ugname.value = item.ugname;
+										getUserData(item.utid, 3);
+									} else {
+										addParents(item);
+									}
 								});
-								console.log('stuData:' + JSON.stringify(stuData));
+
+							}
+						} else {
+							mui.toast(data.RspTxt);
+						}
+					});
+				}
+
+				/**
+				 * 添加家长信息
+				 * @param {Object} data
+				 */
+				function addParents(data) {
+					var div = document.createElement('div');
+					div.id = 'par_' + data.utid;
+					var html1 = '<li class="mui-table-view-cell">\
+									<div class="mui-input-row">\
+										<label>家长姓名:</label>\
+										<input type="text" class="mui-input-clear" value="' + data.ugname + '" disabled="disabled">\
+									</div>\
+								</li>\
+								<li class="mui-table-view-cell">\
+									<div class="mui-input-row">\
+										<label>家长账号:</label>\
+										<input type="text" class="mui-input-clear" value="' + data.utid + '" disabled="disabled">\
+									</div>\
+								</li>';
+					var html2 = '';
+					if(role == 1) { //管理员
+						html2 = '<li class="mui-table-view-cell">\
+									<div class="mui-input-row">\
+										<label>关系:</label>\
+										<input type="text" class="mui-input-clear" value="' + data.urel + '">\
+									</div>\
+								</li>';
+					} else {
+						html2 = '<li class="mui-table-view-cell">\
+									<div class="mui-input-row">\
+										<label>关系:</label>\
+										<input type="text" class="mui-input-clear" value="' + data.urel + '" disabled="disabled">\
+									</div>\
+								</li>';
+					}
+					var html3 = '<li class="mui-table-view-cell">\
+									<div class="mui-input-row">\
+										<label>电话:</label>\
+										<input id="par_phone_' + data.utid + '" type="text" class="mui-input-clear" disabled="disabled">\
+									</div>\
+								</li >\
+								<div style="height:1px;width:100%;"></div>';
+					div.innerHTML = html1 + html2 + html3;
+					document.getElementById("stu_show").appendChild(div);
+					getUserData(data.utid, 0);
+				}
+
+				/**
+				 * 获取账号的信息
+				 * @param {Object} utid 用户id
+				 *  @param {Object} dataType 0家长,2老师,3学生
+				 */
+				function getUserData(utid, dataType) {
+					//21.通过用户ID获取用户资料
+					//所需参数
+					var comData = {
+						vvl: utid, //用户id，查询的值,p传个人ID,g传ID串
+						vtp: 'p' //查询类型,p(个人)g(id串)
+					};
+					//返回值model：model_userInfo
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostUinf(comData, wd, function(data) {
+						wd.close();
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							var uData = data.RspData[0];
+							if(dataType == 3) { //学生
+								if(uData.usex == 0) {
+									stu_gender.innerText = '女';
+								} else if(uData.usex == 1) {
+									stu_gender.innerText = '男';
+								}
+								stu_phone.value = uData.uid;
+								stu_introduction.value = uData.utxt;
+							} else if(dataType == 0) { //家长
+								document.getElementById("par_phone_" + uData.utid).value = uData.uid;
+							} else if(dataType == 2) { //教师
+								if(uData.usex == 0) {
+									tea_gender.innerText = '女';
+								} else if(uData.usex == 1) {
+									tea_gender.innerText = '男';
+								}
+								tea_introduction.value = uData.utxt;
 							}
 						} else {
 							mui.toast(data.RspTxt);
