--- a/JiaoBaoYun-hb/html/mine/qun_data.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data.html
@@ -244,10 +244,12 @@
 						console.log('keep-member：群id：' + this.getAttribute('data-gid'));
 						console.log('keep-member：资料id：' + this.getAttribute('data-stuid'));
 						console.log('keep-member：资料名：' + this.getAttribute('data-stuname'));
+						console.log('keep-member：资料头像：' + this.getAttribute('data-stuimg'));
 						var gid = this.getAttribute('data-gid'); //群id
 						var gname = ''; //群名称
 						var stuid = this.getAttribute('data-stuid'); //资料id
 						var stuname = this.getAttribute('data-stuname') //资料名称
+						var stuimg = this.getAttribute('data-stuimg') //资料头像
 						var mstype = ''; //用户管理角色
 						mui.each(qunList, function(index, item) {
 							if(item.gid == gid) {
@@ -262,6 +264,7 @@
 							mstype: mstype, //用户管理角色,0家长,1管理员,2老师,3学生
 							stuid: stuid, //资料id
 							stuname: stuname, //资料名称
+							stuimg: stuimg, //资料头像
 							type: type, //资料类型
 						}
 						events.openNewWindowWithData('qun_data_details.html', passData);
@@ -516,7 +519,7 @@
 						//删除按钮
 						var html1 = '<div class="mui-icon iconfont icon-close" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" style="display: none;"></div>';
 						//成员,
-						var html2 = '<div class="keep-box-shadow-border keep-member" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" data-stuname="' + member.stuname + '">';
+						var html2 = '<div class="keep-box-shadow-border keep-member" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" data-stuname="' + member.stuname + '" data-stuimg="' + member.stuimg + '">';
 						//头像
 						var html3 = '';
 						if(member.stuimg != null && member.stuimg != '') {
