--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -193,6 +193,7 @@
 				var role = ''; //用户管理角色0家长,1管理员,2老师,3学生
 				var teaData = null; //记录获取的老师的资料
 				var stuData = []; //记录获取的学生资料
+				var parData = []; //记录获取的学生资料的家长信息
 
 				//---学生界面中相关的元素---start---
 				var stu_name = document.getElementById("stu_name"); //学生姓名
@@ -225,6 +226,8 @@
 				//	gname: gname, //群名称
 				//	mstype: mstype, //用户管理角色,0家长,1管理员,2老师,3学生
 				//	stuid: stuid, //资料id
+				//	stuname: stuname, //资料名称
+				//	stuimg: stuimg, //资料头像
 				//	type: type, //资料类型
 				//}
 				console.log('从群资料页面获取的数据:' + JSON.stringify(data));
@@ -283,9 +286,25 @@
 
 				//保存按钮
 				document.getElementById('finish').addEventListener('tap', function() {
+					console.log('保存：' + mstype);
 					if(mstype == 2) {
 						//老师
-						console.log('finish' + mstype);
+						changeTea(); //修改老师资料
+					} else if(mstype == 3) {
+						//学生
+						var stuName = stu_name.value;
+						if(stuName != data.stuname) { //判断是否修改了学生姓名
+							console.log('更改学生姓名:' + stuName);
+							changeStuName(stuName); //更改学生姓名
+						}
+						mui.each(parData, function(index, item) {
+							console.log('家长信息:' + JSON.stringify(item));
+							var urel = document.getElementById("par_urel_" + item.utid).value;
+							if(urel != item.urel) { //判断是否修改了学生姓名
+								console.log('更改家长关系:' + item.utid + '|' + urel);
+								changeParUrel(item.ustuid, urel); //更新与家长关系
+							}
+						});
 					}
 				})
 
@@ -385,10 +404,9 @@
 									tea_expsch.value = teaData.expsch;
 								}
 								if(teaData.utid != null && teaData.utid != '') {
-									getUserData(teaData.utid, 2);//查找关联的老师账号信息
+									getUserData(teaData.utid, 2); //查找关联的老师账号信息
 								}
-							}
-							if(type == 3) { //学生
+							} else if(type == 3) { //学生
 								mui.each(data.RspData, function(index, item) {
 									console.log('获取学生详细信息:' + JSON.stringify(item));
 									stuData.push(item);
@@ -397,6 +415,7 @@
 										stu_ugname.value = item.ugname;
 										getUserData(item.utid, 3);
 									} else {
+										parData.push(item);
 										addParents(item);
 									}
 								});
@@ -432,7 +451,7 @@
 						html2 = '<li class="mui-table-view-cell">\
 									<div class="mui-input-row">\
 										<label>关系:</label>\
-										<input type="text" class="mui-input-clear" value="' + data.urel + '">\
+										<input id="par_urel_' + data.utid + '" type="text" class="mui-input-clear" value="' + data.urel + '">\
 									</div>\
 								</li>';
 					} else {
@@ -493,6 +512,108 @@
 								}
 								tea_introduction.value = uData.utxt;
 							}
+						} else {
+							mui.toast(data.RspTxt);
+						}
+					});
+				}
+
+				/**
+				 * 修改学生资料名称
+				 * @param {Object} stuName
+				 */
+				function changeStuName(stuName) {
+					//23.通过用户资料ID或关联ID更改各类型资料
+					//所需参数
+					var comData = {
+						vtp: 'stu', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+						stuid: data.stuid, //资料ID,更新学生老师必填,关系留0
+						stuname: stuName, //资料名称
+						stuimg: data.stuimg, //资料头像,学生必填,其他留0
+						job: '', //职位,老师必填,其他留空
+						title: '', //职称,老师必填,其他留空
+						expsch: '', //教龄,老师必填,其他留空
+						sub: '', //科目,老师必填,其他留空
+						ustuid: '', //关联ID,更新与家长关系必填,其他留空
+						urel: '', //关系,更新与家长关系必填,其他留空
+					};
+
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostReStu(comData, wd, function(data) {
+						wd.close();
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							mui.toast('修改学生姓名成功');
+							console.log('修改学生姓名成功');
+						} else {
+							mui.toast(data.RspTxt);
+						}
+					});
+				}
+
+				/**
+				 * 更新与家长关系
+				 * @param {Object} ustuid 关联ID
+				 * @param {Object} urel 关系
+				 */
+				function changeParUrel(ustuid, urel) {
+					//23.通过用户资料ID或关联ID更改各类型资料
+					//所需参数
+					var comData = {
+						vtp: 'gen', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+						stuid: '0', //资料ID,更新学生老师必填,关系留0
+						stuname: '0', //资料名称
+						stuimg: '0', //资料头像,学生必填,其他留0
+						job: '', //职位,老师必填,其他留空
+						title: '', //职称,老师必填,其他留空
+						expsch: '', //教龄,老师必填,其他留空
+						sub: '', //科目,老师必填,其他留空
+						ustuid: ustuid, //关联ID,更新与家长关系必填,其他留空
+						urel: urel, //关系,更新与家长关系必填,其他留空
+					};
+
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostReStu(comData, wd, function(data) {
+						wd.close();
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							mui.toast('更新与家长关系成功');
+							console.log('更新与家长关系成功');
+						} else {
+							mui.toast(data.RspTxt);
+						}
+					});
+				}
+
+				/**
+				 * 修改老师资料
+				 */
+				function changeTea() {
+					//23.通过用户资料ID或关联ID更改各类型资料
+					//所需参数
+					var comData = {
+						vtp: 'tec', //更新资料类型,stu:学生,tec:老师,gen:家长关系
+						stuid: data.stuid, //资料ID,更新学生老师必填,关系留0
+						stuname: tea_name.value, //资料名称
+						stuimg: data.stuimg, //资料头像,学生必填,其他留0
+						job: tea_job.value, //职位,老师必填,其他留空
+						title: tea_title.value, //职称,老师必填,其他留空
+						expsch: tea_expsch.value, //教龄,老师必填,其他留空
+						sub: tea_sub.value, //科目,老师必填,其他留空
+						ustuid: '', //关联ID,更新与家长关系必填,其他留空
+						urel: '', //关系,更新与家长关系必填,其他留空
+					};
+
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostReStu(comData, wd, function(data) {
+						wd.close();
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							mui.toast('修改老师资料成功');
+							console.log('修改老师资料成功');
 						} else {
 							mui.toast(data.RspTxt);
 						}
