--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -9,219 +9,26 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-
-		<style>
-			.mui-table-view {
-				background: transparent;
-				/*背景色透明*/
-			}
-			
-			.mui-table-view-cell {
-				background: white;
-				/*cell 背景设为白色*/
-				padding: 0;
-				/*内边距为0*/
-				margin-bottom: 10px;
-			}
-			
-			.mui-table-view:before,
-			.mui-table-view:after,
-			.mui-table-view-cell:after {
-				height: 0px;
-				/*去掉横线*/
-			}
-			
-			.mui-row-padding-8px {
-				padding: 8px;
-				/*内边距为8px*/
-				padding: 12px;
-			}
-			
-			.dynamic-personal-image {
-				/*个人头像圆形*/
-				border-radius: 50%;
-				width: 50px;
-				height: 50px;
-			}
-			
-			.dynamic-image-div {
-				/*内容中图片之间的内边距*/
-				padding: 1px;
-			}
-			
-			.dynamic-image {
-				/*内容的图片占全部空间*/
-				width: 100%;
-				height: 100%;
-			}
-			
-			.dynamic-icon,
-			.dynamic-icon-praise,
-			.dynamic-icon-comment,
-			.dynamic-icon-forward {
-				/*点赞，评论，分享的图标*/
-				height: 20px;
-				width: 20px;
-				margin-left: 20px;
-			}
-			
-			.dynamic-icon-Level {
-				/*等级图标*/
-				height: 20px;
-				margin-left: 10px;
-			}
-			
-			.dynamic-icon-praise-small {
-				/*点赞列表的小图标*/
-				height: 15px;
-				width: 15px;
-				margin-right: 5px;
-				margin-bottom: 0px;
-			}
-			
-			.dynamic-margin-top-10px {
-				margin-top: 10px;
-			}
-			
-			.dynamic-padding-left-10px {
-				padding-left: 10px;
-			}
-			
-			.dynamic-line {
-				/*点赞列表上面的横线*/
-				height: 1px;
-				width: 100%;
-				background: #CCCCCC;
-			}
-			
-			.dynamic-contenttext {
-				/*动态内容*/
-				font-family: '微软雅黑 Regular', '微软雅黑';
-				/*字体样式*/
-			}
-			
-			.dynamic-praise-name,
-			.dynamic-comment-name {
-				/*点赞者和评论者的名字*/
-				color: #1277C7;
-			}
-			
-			.dynamic-comment-btn {
-				/*底部的评论按钮*/
-				width: 100%;
-				margin-top: 10px;
-			}
-			
-			.dynamic-image-more {
-				/*更多图片*/
-				position: absolute;
-				width: 99%;
-				height: 99%;
-				font-size: 40px;
-				color: white;
-				text-align: center;
-				background-color: rgba(0, 0, 0, 0.3);
-			}
-		</style>
+		<link rel="stylesheet" href="../../css/quan/about-me.css" />
 	</head>
 
 	<body>
 		<!--下拉刷新容器-->
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--数据列表-->
-				<ul class="mui-table-view">
-					<li id="0" class="mui-table-view-cell">
-						<div style="padding:12px">
-							<div class="mui-media-body mui-pull-left">
-								<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
-							</div>
-							<div class="mui-media-body dynamic-padding-left-10px">
-								<span class=" mui-pull-right dynamic-comment-name">回复</span>
-								<h4>刘阳给我留言</h4>
-								<p>昨天 10:55</p>
-							</div>
-
-						</div>
-						<div style="padding: 5px 10px 10px 10px;">
-							有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。
-						</div>
-
-						<div style="padding:0px 10px 10px 10px">
-							<font class="common-font-family-Regular dynamic-comment-name">孟祥菊</font>
-							<font class="common-font-family-Regular">回复</font>
-							<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-							<font class="common-font-family-Regular">一二三四五六七八九十</font>
-						</div>
-					</li>
-
-					<li id="1" class="mui-table-view-cell">
-						<div style="padding:12px;background-color:white ">
-							<div style="background-color: white;">
-								<div class="mui-media-body mui-pull-left">
-									<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
-								</div>
-								<div class="mui-media-body dynamic-padding-left-10px">
-									<span class=" mui-pull-right dynamic-comment-name">回复</span>
-									<h4>李媛媛赞了我</h4>
-									<p>昨天 10:55</p>
-								</div>
-							</div>
-							<div style="margin:10px 0px;padding:5px;background-color: rgb(242,242,242);">
-								<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
-								<font style="color:#1277C7 ;vertical-align: 80%;font-size: 16px;padding-left: 10px;">
-									刘阳：
-									<span style="color: black;">今天自己做的面包，孩子..</span>
-								</font>
-								</img>
-							</div>
-						</div>
-
-					</li>
-
-					<li id="2" class="mui-table-view-cell">
-						<div class="mui-row-padding-8px background-color: white;">
-							<div class="mui-media-body mui-pull-left">
-								<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
-							</div>
-							<div class="mui-media-body dynamic-padding-left-10px">
-								<span class=" mui-pull-right dynamic-comment-name">回复</span>
-								<h4>李媛媛</h4>
-								<p>昨天 10:55</p>
-							</div>
-						</div>
-						<div style="background-color: white;padding: 0px 10px 10px 10px">
-							<font>有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。有你的陪伴，人生才多姿多彩。</font>
-						</div>
-						<div style="margin-left: 10px;margin-bottom:5px;padding:5px;background-color: rgb(242,242,242);">
-							<img class=" dynamic-personal-image" src="../../image/dynamic/u101.png">
-							<font style="color:#1277C7 ;vertical-align: 80%;font-size: 16px;padding-left: 10px;">刘阳：<span style="color: black;">今天自己做的面包，孩子..</span></font>
-							</img>
-						</div>
-						<div style="padding: 10px;">
-							<div class="mui-media-body">
-								<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-								<font class="common-font-family-Regular">：嘚瑟呵呵</font>
-							</div>
-							<div class="mui-media-body">
-								<font class="common-font-family-Regular dynamic-comment-name">孟祥菊</font>
-								<font class="common-font-family-Regular">回复</font>
-								<font class="common-font-family-Regular dynamic-comment-name">陪你上演地老天荒</font>
-								<font class="common-font-family-Regular">一二三四五六七八九十</font>
-							</div>
-						</div>
-			</div>
-
-			</li>
-			</ul>
-		</div>
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+		  <div class="mui-scroll">
+		    <!--数据列表-->
+		    <ul id="list-container" class="mui-table-view">
+		      
+		    </ul>
+		  </div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/libs/myStorage/myStorage.js"></script>
 		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
-		<script src="../../js/mine/about-me.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/quan/about-me.js"></script>
 	</body>
 
 </html>
