--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -384,7 +384,8 @@
 							var comData = {
 								uuid: plus.device.uuid,
 								shaketype: 'login',
-								appid: plus.runtime.appid
+								appid: plus.runtime.appid,
+								vtp:'mb'
 							};
 							console.log('endata:' + JSON.stringify(enData) + 'comdata:' + JSON.stringify(comData));
 							//发送网络请求，data为网络返回值
