--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
-					<input type="password" id="password0" placeholder="请输入新密码 ">
+
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
@@ -142,9 +142,16 @@
 								shaketype: 'repw',
 								appid: plus.runtime.appid,
 								token: personalToken
+//								vtp:'',//np(新建密码),rp(修改密码)
+//								vvl://
 							};
 							//发送网络请求，data为网络返回值
 							if(tempFlag == 0 || tempFlag == 2) {
+								comData.vtp = 'np';
+							} else { //修改密码，需要原先密码
+								comData.vtp = 'rp';
+								enData.vvl = document.getElementById("old-password").value;
+							}
 								postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
 									//成功，关闭等待框
 									wd.close();
@@ -165,9 +172,7 @@
 										}
 									}
 								});
-							} else { //修改密码，需要原先密码
-
-							}
+							
 
 						} else {
 							mui.toast(data.RspTxt);
